--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main{
    font-weight: bolder;
     font-size: xx-large;
     background-attachment: fixed;
-    margin: 10px 50px 5px 50px;
+    margin: 10px 50px 50px 50px;
     max-width: 1300px;
     min-width: 300px;
     margin: auto;
@@ -76,9 +76,6 @@ main{
 
 }
 
-main > aside{
-    margin-bottom: 20px;
-}
 main > p{
     font-size: 70px;
     text-align: center;
@@ -123,8 +120,8 @@ aside{
     font-size: small;
     max-width: 1300px;
     min-width: 300px;
-   margin: 0px 30px 0px 30px;
-    padding-bottom: 0px;
+   margin: 0px 30px 30px 30px;
+    padding-bottom: 20px;
     border-radius: 20px;
    
 }
@@ -140,4 +137,11 @@ aside > h3{
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     
+}
+
+footer{
+
+    background-color: #17181D;
+    color: #E09145;
+
 }
